Fri Feb 13 13:08:55 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, ve/Makefile.am: do not compile glade-helper,
	  we don't need glade thus kill the libglade dep

	* configure.in: require GTK 2.6.0 (yeah way behind times)

	* src/gnome-genius.c: exorcise some libgnome/ui demons.  get rid of
	  gnome_help_* and gnome_config_* and gnome_about*  One more step
	  towards getting rid of this dep

	* src/genius.c, src/gnome-genius.c: when binreloc gets us the wrong
	  dir do not use it.  Use the default compiled in dir as backup.

Tue Feb 10 16:43:08 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, NEWS: raise version update NEWS

	* src/mpwrap.c: fix leak in multiply

	* src/mpwrap.c: fix a leak and fix a buffer overrun (Thanks to
	  Simon Munton simon-genius at munton.demon.co.uk)

	* lib/equation_solving/diffeqs.gel: Fix EulersMethod (it was
	  overshooting by one increment)  Also EulersMethod and RungeKutta
	  now solve system by just accepting vectors for y

	* src/geniustests.txt: add new tests for EulersMethod

	* help/C/genius.xml, help/C/gel-function-list.xml: Update
	  documentation, fix EulersMethod doc by using the right id string.

Sun Feb 08 00:21:32 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.4

Sun Feb 08 00:09:50 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: make sure the x and y point spinboxes are updated
	  when we click on the canvas to draw a solution

Tue Feb 03 00:00:11 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix typo (not adding a new string, in fact just
	  getting rid of a bad one, the good one is already in the
	  translations)

Mon Feb 02 23:40:32 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix typo, it is dy/dx not dx/dy.  Also fix the
	  slopefield vectorfield sizing stuff to actually get it right in
	  every aspect.  I.e., scale to uniform size AFTER converting to
	  pixels, DUH!

Mon Feb 02 01:11:11 2009  Jiri (George) Lebl <jirka@5z.com>
