@@ -16,7 +16,7 @@ VTE_REQUIRED=0.8.19
 LIBGNOMEUI_REQUIRED=2.0.0
 LIBGNOME_REQUIRED=2.0.0
 GTK_REQUIRED=2.6.0
-GLIB_REQUIRED=2.0.0
+GLIB_REQUIRED=2.6.0
 GTKSOURCEVIEW_REQUIRED=0.3.0
 GTKSOURCEVIEW2_REQUIRED=2.0.2
 
