@@ -581,11 +581,12 @@ char *
 ve_config_get_translated_string (VeConfig *config,
 				 const char *key)
 {
-	const GList *li;
 	char *dkey;
 	char *def;
 	VeLine *line = NULL;
 	char *ret;
+	const char * const* langs;
+	int i;
 
 	g_return_val_if_fail (config != NULL, NULL);
 	g_return_val_if_fail (key != NULL, NULL);
@@ -597,10 +598,9 @@ ve_config_get_translated_string (VeConfig *config,
 		def++;
 	}
 
-	for (li = ve_i18n_get_language_list ("LC_MESSAGES");
-	     li != NULL;
-	     li = li->next) {
-		char *full = g_strdup_printf ("%s[%s]", dkey, (char *)li->data);
+	langs = g_get_language_names ();
+	for (i = 0; langs[i] != NULL; i++) {
+		char *full = g_strdup_printf ("%s[%s]", dkey, langs[i]);
 		line = g_hash_table_lookup (config->line_ht, full);
 		g_free (full);
 		if (line != NULL)
