@@ -93,40 +93,3 @@ ve_find_file (const char *filename, const GList *directories)
 
 	return NULL;
 }
-
-/**
- * ve_i18n_get_language_list:
- * @ignored: Not used anymore (Historically: Name of category to look
- *                 up, e.g. %"LC_MESSAGES").
- * 
- * Computes a list of applicable locale names, which can be used to e.g.
- * construct locale-dependent filenames or search paths. The returned list is
- * sorted from most desirable to least desirable and always contains the
- * default locale "C".
- * 
- * Return value: the list of languages, this list should not be freed as it is
- * owned by ve.
- **/
-const GList *
-ve_i18n_get_language_list (const gchar *category_name)
-{
-	static GStaticRecMutex lang_list_lock = G_STATIC_REC_MUTEX_INIT;
-	static GList *list = NULL;
-	const char * const* langs;
-	int i;
-
-	g_static_rec_mutex_lock (&lang_list_lock);
-
-	if (list == NULL) {
-		langs = g_get_language_names ();
-		for (i = 0; langs[i] != NULL; i++) {
-			list = g_list_prepend (list, g_strdup(langs[i]));
-		}
-
-		list = g_list_reverse (list);
-	}
-
-	g_static_rec_mutex_unlock (&lang_list_lock);
-
-	return list;
-}
