@@ -294,89 +294,3 @@ guess_category_value (const gchar *categoryname)
   return NULL;
 }
 
-
-static GHashTable *category_table= NULL;
-
-/**
- * ve_i18n_get_language_list:
- * @category_name: Name of category to look up, e.g. %"LC_MESSAGES".
- * 
- * This computes a list of language strings that the user wants.  It searches in
- * the standard environment variables to find the list, which is sorted in order
- * from most desirable to least desirable.  The `C' locale is appended to the
- * list if it does not already appear (other routines depend on this
- * behaviour). If @category_name is %NULL, then %LC_ALL is assumed.
- *
- * This function and all the related above code stolen from libgnome and thus
- * copyrighted as:
- *  Copyright (C) 1997, 1998, 1999, 2000 Free Software Foundation
- *  All rights reserved.
- * 
- * Return value: the list of languages, this list should not be freed as it is
- * owned by vicious-extensions
- **/
-const GList *
-ve_i18n_get_language_list (const gchar *category_name)
-{
-  GList *list;
-
-  if (!category_name)
-    category_name= "LC_ALL";
-
-  if (category_table)
-    {
-      list= g_hash_table_lookup (category_table, (const gpointer) category_name);
-    }
-  else
-    {
-      category_table= g_hash_table_new (g_str_hash, g_str_equal);
-      list= NULL;
-    }
-
-  if (!list)
-    {
-      gint c_locale_defined= FALSE;
-  
-      const gchar *category_value;
-      gchar *category_memory, *orig_category_memory;
-
-      category_value = guess_category_value (category_name);
-      if (! category_value)
-	category_value = "C";
-      orig_category_memory = category_memory =
-	g_malloc (strlen (category_value)+1);
-      
-      while (category_value[0] != '\0')
-	{
-	  while (category_value[0] != '\0' && category_value[0] == ':')
-	    ++category_value;
-	  
-	  if (category_value[0] != '\0')
-	    {
-	      char *cp= category_memory;
-	      
-	      while (category_value[0] != '\0' && category_value[0] != ':')
-		*category_memory++= *category_value++;
-	      
-	      category_memory[0]= '\0'; 
-	      category_memory++;
-	      
-	      cp = unalias_lang(cp);
-	      
-	      if (strcmp (cp, "C") == 0)
-		c_locale_defined= TRUE;
-	      
-	      list= g_list_concat (list, compute_locale_variants (cp));
-	    }
-	}
-
-      g_free (orig_category_memory);
-      
-      if (!c_locale_defined)
-	list= g_list_append (list, "C");
-
-      g_hash_table_insert (category_table, (gpointer) category_name, list);
-    }
-  
-  return list;
-}
