@@ -1,3 +1,15 @@
+Fri Feb 13 13:29:35 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* ve/ve-misc.c, ve/ve-misc.h, ve/ve-gnome.c, ve/ve-nongnome.c,
+	  ve/ve-config.c:  remove ve_find_prog_in_path and
+	  ve_i18n_get_language_list, those have analogs in glib now
+	  ve_is_prog_in_path now doesn't take the extra path argument,
+	  gdm needed that somewhere and ve is only for genius now.
+
+	* src/graphing.c: use ve_is_prog_in_path in the new way
+
+	* configure.in: require glib 2.6.0 as well
+
 Fri Feb 13 13:08:55 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* configure.in, ve/Makefile.am: do not compile glade-helper,
